# SciAudit

./: .gitignore  .pre-commit-config.yaml  .sciaudit.yml  CONTRIBUTING.md  README.md  VISION.md  cli_test_out.txt  corpus_eval_summary.csv  output.txt  pyproject.toml  rule_metrics.csv  test_out.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: sciaudit.yml
corpus/bad/: bad_stats.py  leakage.py
corpus/good/: clean.py  simple_ml.py
examples/: bad_practice_demo.py  demo_integridade.ipynb
sciaudit/cli/: main.py
sciaudit/core/: config.py  engine.py  models.py
sciaudit/rules/: base.py  data_leakage.py  methodology.py  reproducibility.py
sciaudit/rules/causal/: claims.py  feature_importance.py
sciaudit/rules/leakage/: contamination.py  target_leakage.py  temporal_label.py
sciaudit/rules/reproducibility/: random_seed.py  shuffle_logic.py
sciaudit/rules/statistics/: data_hygiene.py  rigor.py
tests/: test_cli.py  test_config.py  test_engine.py  test_registry.py  test_rules.py
tools/: eval_corpus.py
