[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sciaudit"
version = "0.1.0"
authors = [
  { name = "Lucas Hoffnung Bernardo", email = "lumatizerh@hotmail.com" },
]
description = "SciAudit: Auditor de integridade científica em código e notebooks Python."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/lbhoffnung/SciAudit"
"Bug Tracker" = "https://github.com/lbhoffnung/SciAudit/issues"

[project.scripts]
sciaudit = "sciaudit.cli.main:main"
