[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sciaudit"
version = "0.1.0"
authors = [
  { name = "Lucas Hoffnung Bernardo", email = "lumatizerh@hotmail.com" },
]
description = "Auditor de integridade científica para código e notebooks Python (vazamento de dados, p-hacking, reprodutibilidade)."
readme = "README.md"
keywords = ["data-science", "lint", "integrity", "reproducibility", "machine-learning"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/lbhoffnung/SciAudit"
"Bug Tracker" = "https://github.com/lbhoffnung/SciAudit/issues"

[project.scripts]
sciaudit = "sciaudit.cli.main:main"

[tool.setuptools.packages.find]
include = ["sciaudit*"]
exclude = ["corpus*", "tests*", "examples*", "tools*", "test_data*"]
